20.feb (lv)
      - import MusicXML quarter tone accidentals following Tartini convention
        (export was done by (la) on Jan 26
19.feb (ws)
      - script interface chords: add "type" property to distinguish between normal and grace notes
      - expose grace notes in script cursor interface
17.feb (lv)
      - updated MusicXML testfiles
       (ws)
      - implemented "Change Instrument..." button in staff properties dialog to initialize all
        instrument properties from an instrument template (in instruments.xml)
      - implemented "show more" checkbox for instrument dialog. All instrument groups and instruments
        marked with the <extended\> tag in instruments.xml are only shown when "show more" is checked.
16.feb (ws)
      - script interface: introduced script interface version numbers
      - script interface: simplified interface for Score store() and load(); Measure: pos(), boundingRect()
      - script interface: fix return string for note name (now derived from tpc value, not pitch)
15.feb (ws)
      - make sure notes are sorted in chord note list; this fixes some obscure bugs
       (lv)
      - fixed bug #4495: MusicXML import crashing if no time signature specified
      - bug #4477: MusicXML: tremolos between two notes not exported/imported
        import implemented according to comments by David Bolton on Thu, 02/11/2010 - 19:29
14.feb (ws)
      - added "scales" plugin from Maurizio M. Gavioli
13.feb (ws)
      - overhaul of script bindings
       (lv)
      - bug #4477: MusicXML: tremolos between two notes not exported/imported
        export implemented according to comments by David Bolton on Thu, 02/11/2010 - 19:29
12,feb (ws)
      - undo/redo are now application shortcuts and work even if a palette opened
        by create is active
      - export small staves in part always at normal size
11.feb (ws)
      - update to scripting interface
8.feb (db)
      - update windows build for JACK 1.9.4
7.feb (db)